tdf#150623 speed up tab switch in calc

no need to calculate row heights twice on tab switch

Change-Id: I0ac93640d41344a711197bcfd67874b700be23b2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183297
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins